--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Shooting Bullets</title>
     <style>
       body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         padding: 0;
         margin: 0;
         height: 100vh;
@@ -19,64 +16,85 @@
           rgb(17, 51, 161) 0%,
           rgb(136, 34, 195) 100%
         );
+
+        overflow: hidden;
       }
       h1 {
         margin: 0px;
         margin-bottom: 10px;
         font-size: 2.9em;
         color: lightgrey;
+        text-align: center;
       }
       .controls {
         display: grid;
         grid-template-columns: 50px 150px;
-        color: lightgrey;
+        color: black;
         margin-bottom: 20px;
       }
     </style>
   </head>
   <body>
-    <h1>JavaScript Shooting Bullets</h1>
+    <h1>American School Shooting Simulator</h1>
 
     <div class="container">
-        <canvas id="canvas"></canvas>
-        <div id="js_timer">
-            <div id="timer">
-                00:00
-            </div>
-        </div>
-    </div>
-    <div class="controle">
-        <h1>Controle</h1>
-    </div>
-    <div id="z" class="box">
-        <h1>Z</h1>
-    </div>
-    <div id="q" class="box">
-        <h1>Q</h1>
-    </div>
-    <div id="s" class="box">
-        <h1>S</h1>
-    </div>
-    <div id="d" class="box">
-        <h1>D</h1>
-    </div>
-    <div id="space" class="box">
-        <h1>Espace</h1>
-    </div>
-    <div id="arrowup" class="box">
-        <h1>↑</h1>
-    </div>
-    <div id="arrowdown" class="box">
-        <h1>↓</h1>
-    </div>
-    <div id="arrowleft" class="box">
-        <h1>←</h1>
-    </div>
-    <div id="arrowright" class="box">
-        <h1>→</h1>
-    </div>
 
-    <canvas id="game"></canvas>
+    <div class="section_controle">
+        <div class="controle">
+          <h1>Controle</h1>
+        </div>
+      <div class="controle_fleche">
+        <div class="zqsd_z">
+        <div id="z" class="box">
+          <h1>Z</h1>
+        </div>
+        <div class="zqsd">
+      <div id="q" class="box">
+          <h1>Q</h1>
+      </div>
+      <div id="s" class="box">
+        <h1>S</h1>
+      </div>
+      <div id="d" class="box">
+        <h1>D</h1>
+      </div>
+    </div>
+  </div>
+      <div id="space" class="box">
+        <h1>Espace</h1>
+      </div>
+      <div class="fleche">
+        <div id="arrowup" class="box">
+          <h1>↑</h1>
+        </div>
+        <div class="fleche_cote">
+          <div id="arrowleft" class="box">
+            <h1>←</h1>
+          </div>
+        <div id="arrowdown" class="box">
+          <h1>↓</h1>
+        </div>
+       
+        <div id="arrowright" class="box">
+        <h1>→</h1>
+      </div>
+    </div>
+    </div>
+  </div>
+  </div>
+  <div class="jeu">
+  <canvas id="game"></canvas>
+  </div>
+  <div class="placement_timer">
+    <div id="js_timer">
+      <div id="timer">
+          00:00
+      </div>
+  </div>
+</div>
+
+</div>
+    
     <script src="index.js" type="module"></script>
   </body>
 </html>
