--- a/Index/PA.html
+++ b/Index/PA.html
@@ -23,14 +23,18 @@
     <div class="rectangle">          
     </div>
     <section class="header">
-        <divc class="title-wrapper">
+        <div class="title-wrapper">
           <h1 class="sweet-title">
             <span data-text="American">American </span>
             <span data-text="School">School </span>
             <span data-text="Shooting">Shooting</span>
           </h1>
           </div>
-      </section>
+
+        <button class="Lancement" onclick="window.location.href='index.html';">
+            Lancer le jeu
+        </button>      
+    </section>
 
       <div class=" glow block"></div>
 </html>
