--- a/Index/index.html
+++ b/Index/index.html
@@ -34,6 +34,7 @@
       }
     </style>
   </head>
+  <script src="../index.js" type="module"></script>
   <body>
     <h1>American School Shooting Simulator</h1>
 
@@ -95,6 +96,6 @@
 
 </div>
     
-    <script src="index.js" type="module"></script>
+   
   </body>
 </html>
